--- a/.gitignore
+++ b/.gitignore
@@ -7,11 +7,47 @@
 /bazel-out
 
 # Node
-/node_modules
+node_modules/
+
+# Logs
+logs
+*.log
+npm-debug.log*
 npm-debug.log
 yarn-error.log
 
+
+# dotenv environment variables
+.env
+.env.*
+
+# OS
+.DS_Store
+
+# Build output
 # IDEs and editors
+
+# Angular build
+/famcal/dist/
+
+# Firebase service account (never commit secrets)
+server/firebase-service-account.json
+
+# Misc
+*.tgz
+.idea/
+.vscode/
+
+# Coverage
+coverage/
+
+# Firebase emulators
+firebase-debug.log
+firebase-emulator-suite.log
+
+# Others
+*.sublime-workspace
+*.sublime-project
 .idea/
 .project
 .classpath
@@ -38,44 +74,6 @@ testem.log
 /typings
 __screenshots__/
 
-# Firebase/Express backend secrets
-server/firebase-service-account.json
-.env
-
-# Build output
-dist/
-
-# Ignore Angular environments except production
-src/environments/*.ts
-!src/environments/environment.prod.ts
-
-# Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Misc
-*.tgz
-
 # System files
 .DS_Store
 Thumbs.db
-
-# Firebase/Express backend secrets
-server/firebase-service-account.json
-.env
-
-# Build output
-dist/
-
-# Ignore Angular environments except production
-src/environments/*.ts
-!src/environments/environment.prod.ts
-
-# Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Misc
-*.tgz
