--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,8 @@
     "express": "^5.1.0",
     "firebase-admin": "^13.6.0",
     "jsonwebtoken": "^9.0.2",
-    "openai": "^6.8.1"
+    "node-cron": "^4.2.1",
+    "openai": "^6.8.1",
+    "twilio": "^5.11.1"
   }
 }
