Deploy backend to Firebase Cloud Functions with environment configuration

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build && cp dist/famcal/browser/index.csr.html dist/famcal/browser/index.html",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr:famcal": "node dist/famcal/server/server.mjs"
