--- a/functions/package.json
+++ b/functions/package.json
@@ -2,7 +2,8 @@
   "name": "functions",
   "scripts": {
     "lint": "eslint --ext .js,.ts .",
-    "build": "tsc",
+    "build": "npm run copy:server && tsc",
+    "copy:server": "rm -rf server && cp -r ../server ./server",
     "build:watch": "tsc --watch",
     "serve": "npm run build && firebase emulators:start --only functions",
     "shell": "npm run build && firebase functions:shell",
