--- a/firebase.json
+++ b/firebase.json
@@ -3,7 +3,7 @@
     "source": "functions"
   },
   "hosting": {
-   "public": "dist/famcal/browser",
+    "public": "dist/famcal/browser",
     "ignore": [
       "firebase.json",
       "**/.*",
@@ -22,5 +22,10 @@
         "destination": "/index.html"
       }
     ]
-  }
+  },
+ "emulators": {
+  "firestore": { "port": 8080 },
+  "auth": { "port": 9099 },
+    "hosting": { "port": 5001 }
+}
 }
