--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "firebase": "^12.8.0",
     "firebase-admin": "^13.5.0",
     "jsonwebtoken": "^9.0.2",
     "openai": "^6.8.1",
